// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rehydrating rules should rehydrate additional class names correctly 1`] = `
{
  ".rc-tooltip.rc-tooltip-placement-topRightpaddingLeft20px": {
    "className": "a",
    "declaration": "padding-left:20px",
    "media": "",
    "pseudo": ".rc-tooltip.rc-tooltip-placement-topRight",
    "selector": ".a.rc-tooltip.rc-tooltip-placement-topRight",
    "support": "",
    "type": "RULE",
  },
}
`;

exports[`Rehydrating rules should rehydrate css custom properties 1`] = `
{
  "--custom-property12px": {
    "className": "a",
    "declaration": "--custom-property:12px",
    "media": "",
    "pseudo": "",
    "selector": ".a",
    "support": "",
    "type": "RULE",
  },
}
`;

exports[`Rehydrating rules should rehydrate prioritized longhand rules 1`] = `
{
  ":hovercolorred": {
    "className": "c",
    "declaration": "color:red",
    "media": "",
    "pseudo": ":hover",
    "selector": ".c.c.c:hover",
    "support": "",
    "type": "RULE",
  },
  "padding10px": {
    "className": "b",
    "declaration": "padding:10px",
    "media": "",
    "pseudo": "",
    "selector": ".b",
    "support": "",
    "type": "RULE",
  },
  "paddingLeft20px": {
    "className": "a",
    "declaration": "padding-left:20px",
    "media": "",
    "pseudo": "",
    "selector": ".a.a",
    "support": "",
    "type": "RULE",
  },
}
`;

exports[`Rehydrating rules should rehydrate the renderer cache 1`] = `
{
  ":hover:activeborderColor2px solid rgb(255, 255, 0)": {
    "className": "c",
    "declaration": "border-color:2px solid rgb(255, 255, 0)",
    "media": "",
    "pseudo": ":hover:active",
    "selector": ".c:hover:active",
    "support": "",
    "type": "RULE",
  },
  "colorblue": {
    "className": "b",
    "declaration": "color:blue",
    "media": "",
    "pseudo": "",
    "selector": ".b",
    "support": "",
    "type": "RULE",
  },
  "colorred": {
    "className": "a",
    "declaration": "color:red",
    "media": "",
    "pseudo": "",
    "selector": ".a",
    "support": "",
    "type": "RULE",
  },
}
`;

exports[`Rehydrating rules should rehydrate the renderer cache with specifity prefix 1`] = `
{
  ":hover:activeborderColor2px solid rgb(255, 255, 0)": {
    "className": "c",
    "declaration": "border-color:2px solid rgb(255, 255, 0)",
    "media": "",
    "pseudo": ":hover:active",
    "selector": ".parentClass .c:hover:active",
    "support": "",
    "type": "RULE",
  },
  "colorblue": {
    "className": "b",
    "declaration": "color:blue",
    "media": "",
    "pseudo": "",
    "selector": ".parentClass .b",
    "support": "",
    "type": "RULE",
  },
  "colorred": {
    "className": "a",
    "declaration": "color:red",
    "media": "",
    "pseudo": "",
    "selector": ".parentClass .a",
    "support": "",
    "type": "RULE",
  },
}
`;
